# vram-sherpa

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml
.github/workflows/: catalog-refresh.yml  ci.yml
data/: seed_gpus.json  seed_models.json  seed_variants.json
src/vramsherpa/: __init__.py  catalog.py  config.py  database.py  estimation.py  main.py  models.py  seed.py
src/vramsherpa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vramsherpa/static/css/: styles.css
src/vramsherpa/static/js/: app.js
src/vramsherpa/templates/: base.html  how_it_works.html  index.html  model_detail.html  results_content.html  results_list.html  results_summary.html  results_table.html  results_why.html
tests/: conftest.py  test_app.py  test_estimation.py  test_seed.py
tools/: catalog_sources.yaml  ingest_catalog.py  validate_catalog.py
