[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vramsherpa"
version = "0.1.0"
description = "VRAM Sherpa MVP"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "jinja2>=3.1,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.28,<1.0",
  "ruff>=0.9,<1.0",
  "pre-commit>=4.0,<5.0",
]

[project.scripts]
vramsherpa-seed = "vramsherpa.seed:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vramsherpa = [
  "templates/*.html",
  "static/css/*.css",
  "static/js/*.js",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
